--- a/.aigne/web-smith/pages/workspace/en/community.yaml
+++ b/.aigne/web-smith/pages/workspace/en/community.yaml
@@ -1,75 +1,79 @@
 meta:
-  title: "AIGNE DocSmith Community & Resources | Support and Contribution"
-  description: "Join the AIGNE DocSmith community! Find official documentation, tutorials, and support forums. Learn how to contribute, report issues, and request features."
-  image: ""
+  title: "AIGNE DocSmith Community & Enterprise Solutions"
+  description: "Join the AIGNE DocSmith community to contribute, report issues, and request features. Explore our enterprise solutions for team collaboration, security, and dedicated support."
+  image: "mediakit://hero-community-enterprise.png"
 sections:
-  - sectionName: "communityHero"
-    sectionSummary: "A welcoming hero section to energize users and provide immediate, high-level calls to action for engaging with the community and resources."
-    centeredHeroTitle: "Welcome to the AIGNE Community!"
-    centeredHeroDescription: "This is your space to connect, learn, and build with us. Find amazing resources, get friendly support, and see how you can help shape the future of AI documentation."
-    centeredHeroActions:
-      - text: "Explore the Docs"
-        link: "https://docsmith.aigne.io/docs/"
-      - text: "Join the Discussion"
+  - sectionName: "CommunityHero"
+    sectionSummary: "A vibrant hero section to welcome users, immediately splitting the focus between the open-source community and powerful enterprise solutions, encouraging engagement from both developer and business audiences."
+    splitHeroTitle: "Join Our Community, Power Your Enterprise"
+    splitHeroDescription: "Welcome! This is the hub for everything AIGNE DocSmith. Whether you're here to contribute to our open-source project or looking for robust, scalable solutions for your business, you're in the right place. Let's build something amazing together!"
+    splitHeroActions:
+      - text: "Explore Community"
         link: "https://community.arcblock.io/discussions/boards/aigne"
-  - sectionName: "resourcesGrid"
-    sectionSummary: "A visually engaging grid that directs users to key learning and informational resources, making it easy to find documentation, examples, and tutorials."
-    threeColumnGridTitle: "Your Go-To Resources"
+      - text: "Enterprise Solutions"
+        link: "https://www.aigne.io/contact"
+    splitHeroRightImage: "mediakit://hero-community-enterprise.png"
+  - sectionName: "ContributionHub"
+    sectionSummary: "This section energizes the community to get involved by clearly presenting the two main contribution pathways—reporting bugs and suggesting features—making it feel accessible and exciting to participate."
+    twoColumnGridTitle: "Let's Build Together!"
     list:
-      - sectionName: "documentationCard"
-        sectionSummary: "A card linking to the official documentation, positioned as the primary source of truth for users."
-        iconName: "lucide:book-open-text"
-        cardTitle: "Official Documentation"
-        cardDescription: "Dive deep into every feature with our comprehensive guides. It's your ultimate playbook for mastering DocSmith!"
-      - sectionName: "showcaseCard"
-        sectionSummary: "A card linking to the project showcase to inspire users with real-world examples of what can be built."
-        iconName: "lucide:sparkles"
-        cardTitle: "See It in Action"
-        cardDescription: "Check out our showcase of real-world projects generated with DocSmith. Get inspired and see what's possible!"
-      - sectionName: "tutorialsCard"
-        sectionSummary: "A card directing users to tutorials, providing a practical, hands-on learning path."
-        iconName: "lucide:play-circle"
-        cardTitle: "Quick Tutorials"
-        cardDescription: "Want to get started fast? Our step-by-step tutorials will have you generating amazing docs in no time."
-  - sectionName: "communitySupportGrid"
-    sectionSummary: "This section provides direct links to community support channels, encouraging users to connect with peers and the development team for help and updates."
-    twoColumnGridTitle: "Find Support & Stay Connected"
-    list:
-      - sectionName: "communityForumCard"
-        sectionSummary: "A card directing users to the community forum for discussion and peer-to-peer support."
-        iconName: "lucide:messages-square"
-        cardTitle: "Community Forum"
-        cardDescription: "Have a question or a brilliant idea? Jump into our community forum to chat with fellow developers and the AIGNE team."
-      - sectionName: "twitterCard"
-        sectionSummary: "A card encouraging users to follow the project on Twitter for real-time updates and announcements."
-        iconName: "lucide:twitter"
-        cardTitle: "Follow on Twitter"
-        cardDescription: "Stay in the loop with the latest news, updates, and fun announcements. Don't miss a thing!"
-  - sectionName: "contributingGuide"
-    sectionSummary: "An action-oriented section that clearly outlines the different ways users can contribute to the project, from reporting bugs to submitting code."
-    oneColumnGridTitle: "Let's Build Something Awesome Together!"
-    list:
-      - sectionName: "reportIssueCard"
-        sectionSummary: "Provides a clear path for users to report bugs, guiding them to the GitHub issues page."
+      - sectionName: "ReportIssuesCard"
+        sectionSummary: "A focused card encouraging users to report bugs, framing it as a helpful and valued contribution to the project's quality."
         iconName: "lucide:bug"
         cardTitle: "Report an Issue"
-        cardDescription: "Found a pesky bug? Help us squash it! Head over to our GitHub Issues to let us know. We appreciate your sharp eyes!"
-      - sectionName: "requestFeatureCard"
-        sectionSummary: "Encourages users to share their ideas for new features via GitHub Discussions, fostering community involvement in the roadmap."
+        cardDescription: "Found a bug? Awesome! Your discoveries help us make DocSmith more robust for everyone. Jump over to our GitHub Issues to share the details. We can't wait to see what you've found!"
+      - sectionName: "RequestFeaturesCard"
+        sectionSummary: "An inspiring card that invites users to share their innovative ideas, positioning them as key drivers of the product's future."
         iconName: "lucide:lightbulb"
         cardTitle: "Request a Feature"
-        cardDescription: "Have a brilliant idea for the next big thing? Share it in our GitHub Discussions and let the community chime in!"
-      - sectionName: "contributeCodeCard"
-        sectionSummary: "Invites developers to contribute directly to the codebase, with a pointer to the development setup guide."
-        iconName: "lucide:git-pull-request-draft"
-        cardTitle: "Contribute Code"
-        cardDescription: "Ready to make your mark? Clone the repo, follow our development setup, and send us a pull request. We can't wait to see what you build!"
-  - sectionName: "finalCta"
-    sectionSummary: "A final, high-energy call-to-action that summarizes the key engagement options and encourages immediate participation."
+        cardDescription: "Have a brilliant idea that could make DocSmith even better? We're all ears! Share your vision in our GitHub Discussions and let's brainstorm the future of documentation together."
+  - sectionName: "GitHubCTA"
+    sectionSummary: "A clear and direct call-to-action section that provides immediate, actionable links for users to engage with the community on GitHub, capitalizing on the interest generated by the previous section."
     ctaTitle: "Ready to Jump In?"
-    ctaDescription: "Explore the codebase, dive into the docs, or join the conversation. The AIGNE community is excited to have you!"
+    ctaDescription: "Our GitHub is where the action happens! It's the best place to connect with other contributors, see what's new, and make your voice heard."
     cta:
-      - text: "View on GitHub"
-        link: "https://github.com/AIGNE-io/aigne-doc-smith"
-      - text: "Start Learning Now"
-        link: "https://docsmith.aigne.io/docs/"
+      - text: "Go to GitHub Issues"
+        link: "https://github.com/AIGNE-io/aigne-doc-smith/issues"
+      - text: "Start a Discussion"
+        link: "https://github.com/AIGNE-io/aigne-doc-smith/discussions"
+  - sectionName: "EnterpriseSolutions"
+    sectionSummary: "This section pivots to the enterprise audience, showcasing a professional image and highlighting the value proposition for businesses seeking advanced features and support, making the benefits feel tangible and compelling."
+    splitHeroTitle: "Supercharge Your Team with Enterprise"
+    splitHeroDescription: "Take your documentation to the next level! Our enterprise-grade solutions are built for teams that demand security, seamless collaboration, and dedicated support. Let us handle the heavy lifting so you can focus on building incredible products."
+    splitHeroActions:
+      - text: "Contact Sales"
+        link: "https://www.aigne.io/contact"
+      - text: ""
+        link: ""
+    splitHeroLeftImage: "mediakit://enterprise-features-visual.png"
+  - sectionName: "EnterpriseFeatures"
+    sectionSummary: "A visually engaging grid that breaks down the key enterprise features into digestible, benefit-driven points. This makes it easy for business users to scan and understand the concrete advantages of the enterprise plan."
+    threeColumnGridTitle: "Everything You Need for Professional-Grade Docs"
+    list:
+      - sectionName: "TeamCollaborationFeature"
+        sectionSummary: "Highlights the collaborative aspects of the enterprise plan, appealing to teams who need efficient, role-based workflows."
+        iconName: "lucide:users"
+        cardTitle: "Team Collaboration"
+        cardDescription: "Bring your whole team on board! With multi-user workflows and role-based access, everyone stays in sync, making collaboration a breeze."
+      - sectionName: "SecurityComplianceFeature"
+        sectionSummary: "Addresses critical business needs for security and data privacy, building trust and assuring decision-makers of the platform's reliability."
+        iconName: "lucide:shield-check"
+        cardTitle: "Security & Compliance"
+        cardDescription: "Your code and data are yours. Deploy on your own private cloud, integrate with SSO, and get full audit logs for complete peace of mind."
+      - sectionName: "PrioritySupportFeature"
+        sectionSummary: "Showcases the premium support and services available, emphasizing the partnership and expert assistance that comes with the enterprise package."
+        iconName: "lucide:life-buoy"
+        cardTitle: "Priority Support & Services"
+        cardDescription: "You're never alone! Get direct access to our engineers, custom team training, and professional services to guarantee your success."
+  - sectionName: "LicenseFAQ"
+    sectionSummary: "A friendly and straightforward FAQ section that demystifies the project's license. It proactively answers common questions, ensuring clarity and transparency for both free and commercial users."
+    faqTitle: "Understanding Our License"
+    faqList:
+      - question: "What license does AIGNE DocSmith use?"
+        answer: "We use the Elastic License 2.0! It's an open-source-friendly license that gives you a ton of freedom."
+      - question: "So, I can use it for free?"
+        answer: "Absolutely! It's free for almost everything, including your personal projects, internal business use, and most commercial applications. Go for it!"
+      - question: "Are there any catch?"
+        answer: "Just one small thing: you can't offer DocSmith as a competing hosted service. Other than that, you're good to go! For all the details, you can always check the full license text."
+      - question: "Where can I read the full license?"
+        answer: "Right in our GitHub repository! You can find the complete LICENSE file there to see all the specifics."
