--- a/.aigne/web-smith/pages/workspace/en/_navigations.yaml
+++ b/.aigne/web-smith/pages/workspace/en/_navigations.yaml
@@ -1,20 +1,20 @@
 - path: /home
   navigation:
     title: Home
-    description: Discover AI-powered docs
+    description: AI-powered code documentation
 - path: /features
   navigation:
     title: Features
-    description: Explore product features
-- path: /quick-start
+    description: Explore core capabilities
+- path: /getting-started
   navigation:
-    title: Quick Start
-    description: Get started in minutes
-- path: /enterprise
+    title: Get Started
+    description: Install and run in minutes
+- path: /usage
   navigation:
-    title: Enterprise
-    description: Solutions for your business
+    title: Usage Guide
+    description: Master the CLI commands
 - path: /community
   navigation:
     title: Community
-    description: Get help and contribute
+    description: Get support and contribute
