--- a/.aigne/web-smith/pages/workspace/en/home.yaml
+++ b/.aigne/web-smith/pages/workspace/en/home.yaml
@@ -1,85 +1,121 @@
 "meta":
-  "title": "AIGNE DocSmith: AI-Powered Documentation that Understands Your Code"
-  "description": "Generate comprehensive, multi-language documentation automatically with AIGNE DocSmith. Our AI analyzes your code to create docs that are always up-to-date. Try it now!"
-  "image": "mediakit://doc-regenerate.png"
+  "title": "AIGNE DocSmith: AI-Powered Documentation That Understands Your Code"
+  "description": "Experience the future of documentation with AIGNE DocSmith. Leverage our AI to automatically generate, translate, and maintain comprehensive, structured docs that stay in sync with your code. Get started in seconds!"
+  "image": "mediakit://aigne-docsmith-hero.png"
 "sections":
   - "sectionName": "Hero"
-    "sectionSummary": "Introduces AIGNE DocSmith with a powerful headline, a clear value proposition, and prominent calls-to-action to get started or learn more, paired with a compelling visual of the tool in action."
-    "splitHeroTitle": "Documentation That Writes Itself"
-    "splitHeroDescription": "AIGNE DocSmith uses AI to analyze your codebase and automatically generate comprehensive, structured, and multi-language documentation. Keep your docs perfectly in sync with your code, effortlessly."
+    "sectionSummary": "A vibrant introduction to AIGNE DocSmith, immediately capturing attention with its core value proposition and providing clear, direct calls-to-action to get users started or exploring features."
+    "splitHeroBigTitle": "AI-Powered Documentation"
+    "splitHeroSubTitle": "That Understands Your Code"
+    "splitHeroDescription": "Stop writing docs and start building! AIGNE DocSmith is your AI-powered partner that analyzes your codebase to generate comprehensive, multi-language documentation automatically. Keep your docs perfectly in sync with your code, effortlessly."
+    "splitHeroImage": "mediakit://aigne-docsmith-hero.png"
     "splitHeroActions":
-      - "text": "Get Started Now"
-        "link": "link:///quick-start"
+      - "text": "Get Started"
+        "link": "link:///getting-started"
       - "text": "View Features"
         "link": "link:///features"
-    "splitHeroRightImage": "mediakit://doc-regenerate.png"
   - "sectionName": "KeyBenefits"
-    "sectionSummary": "A three-column grid showcasing the key benefits of DocSmith - Intelligent Analysis, Global Ready, and Always Current."
-    "threeColumnGridTitle": "Why DocSmith?"
+    "sectionSummary": "This section highlights the four core pillars of DocSmith in a scannable grid, making it super easy for you to see the standout benefits at a glance. It's all about showing you the magic behind the curtain!"
+    "fourColumnGridTitle": "Why You'll Love DocSmith"
     "list":
-      - "sectionName": "IntelligentAnalysisCard"
-        "sectionSummary": "Card for Intelligent Analysis benefit, now with an icon."
-        "iconName": "lucide:brain-circuit"
+      - "sectionName": "IntelligentAnalysis"
+        "sectionSummary": "Showcasing the smarts behind DocSmith, this card explains how our AI dives deep into your code to understand its structure and intent, making your docs incredibly insightful."
+        "cardDescription": "Our AI doesn't just read your code—it understands its structure, patterns, and intent to create documentation that's actually helpful."
         "cardTitle": "Intelligent Analysis"
-        "cardDescription": "Our AI understands your code's structure, patterns, and intent to create truly meaningful docs."
-      - "sectionName": "GlobalReadyCard"
-        "sectionSummary": "Card for Global Ready benefit, now with an icon."
-        "iconName": "lucide:globe"
+        "iconName": "lucide:brain-circuit"
+      - "sectionName": "ComprehensiveCoverage"
+        "sectionSummary": "This card emphasizes the breadth of documentation DocSmith can generate, assuring you that from high-level guides to detailed API references, we've got you covered."
+        "cardDescription": "From API references to complete user guides, DocSmith generates everything you need for a world-class documentation experience."
+        "cardTitle": "Comprehensive Coverage"
+        "iconName": "lucide:book-open-check"
+      - "sectionName": "GlobalReady"
+        "sectionSummary": "Highlighting the multi-language power of DocSmith, this card lets you know that your documentation can reach a global audience with professional-grade, context-aware translations."
+        "cardDescription": "Instantly translate your docs into 12 languages with professional-grade, context-aware AI to support your users worldwide."
         "cardTitle": "Global Ready"
-        "cardDescription": "Instantly translate your documentation into 12 languages with professional, context-aware AI translation."
-      - "sectionName": "AlwaysCurrentCard"
-        "sectionSummary": "Card for Always Current benefit, now with an icon."
-        "iconName": "lucide:refresh-cw"
+        "iconName": "lucide:globe"
+      - "sectionName": "AlwaysCurrent"
+        "sectionSummary": "This card provides peace of mind by explaining how DocSmith automatically keeps your documentation in sync with your code, so you never have to worry about outdated info again."
+        "cardDescription": "DocSmith automatically detects changes in your codebase and updates your documentation, so it's always accurate and up-to-date."
         "cardTitle": "Always Current"
-        "cardDescription": "DocSmith automatically detects code changes and updates your documentation, so it's never out of sync."
-  - "sectionName": "ProductDemo"
-    "sectionSummary": "A visual, multi-step showcase of the DocSmith workflow using screenshots of the tool in action. This section demonstrates the core commands—generate, update, translate, and publish—to give users a clear view of the product's capabilities."
-    "oneColumnGridTitle": "See It In Action: From Code to Docs in Minutes"
+        "iconName": "lucide:sparkles"
+  - "sectionName": "CoreFeatures"
+    "sectionSummary": "A visually-driven showcase of DocSmith's standout features. This section uses a dynamic bento grid to pair exciting visuals with clear, benefit-focused descriptions, making the power of each feature feel tangible and exciting."
+    "twoTwoBentoGridTitle": "Explore the Magic Behind DocSmith"
     "list":
-      - "sectionName": "GenerateDemo"
-        "sectionSummary": "Demonstrates the initial 'generate' command with a screenshot of the process and descriptive text on the right."
-        "contentCardLeftImage": "mediakit://doc-generate-docs.png"
-        "contentCardTitle": "aigne doc generate"
-        "contentCardDescription": "One command is all it takes. DocSmith auto-detects your project, asks a few simple questions, and generates a complete documentation set from scratch."
-      - "sectionName": "UpdateDemo"
-        "sectionSummary": "Shows the 'update' command in action, with a screenshot on the right to create visual rhythm."
-        "contentCardRightImage": "mediakit://doc-update.png"
-        "contentCardTitle": "aigne doc update"
-        "contentCardDescription": "Need to refine a section? Interactively select documents and provide feedback. The AI will intelligently rewrite and improve the content."
-      - "sectionName": "TranslateDemo"
-        "sectionSummary": "Highlights the 'translate' command, continuing the alternating layout with a screenshot on the left."
-        "contentCardLeftImage": "mediakit://doc-translate-langs.png"
-        "contentCardTitle": "aigne doc translate"
-        "contentCardDescription": "Go global in seconds. Select your target languages and let our AI handle the professional, context-aware translation."
-      - "sectionName": "PublishDemo"
-        "sectionSummary": "Concludes the demo by showcasing the 'publish' command, with a screenshot on the right."
-        "contentCardRightImage": "mediakit://doc-publish.png"
-        "contentCardTitle": "aigne doc publish"
-        "contentCardDescription": "Ready to go live? Publish your docs with a single command to DocSmith Cloud or your own custom platform."
-  - "sectionName": "LanguageFeatures"
-    "sectionSummary": "Spotlights the multi-language support with a clear headline, descriptive text, and a relevant screenshot, reinforced by a CTA to explore all features."
-    "featureSectionTitle": "Speak to a Global Audience"
-    "featureSectionDescription": "DocSmith provides professional, context-aware translation for 12 languages, powered by the world's leading AI models. From Chinese to Arabic, your documentation will be ready for a worldwide audience."
-    "featureSectionAction":
-      "text": "Explore All Features"
-      "link": "link:///features"
-    "featureSectionBottomImage": "mediakit://doc-translate-langs.png"
-  - "sectionName": "EnterpriseCallout"
-    "sectionSummary": "A targeted call-to-action for enterprise users, briefly outlining key business features and directing them to the dedicated enterprise page for more information."
-    "ctaTitle": "Built for Teams and Enterprises"
-    "ctaDescription": "Need more power? DocSmith offers team collaboration, custom branding, API integration, and private cloud deployments for enterprise-grade documentation workflows."
-    "ctaImage": "mediakit://doc-publish.png"
-    "cta":
-      - "text": "Learn About Enterprise"
-        "link": "link:///enterprise"
-      - "text": ""
-        "link": ""
+      - "sectionName": "AiPoweredGeneration"
+        "sectionSummary": "This card highlights the core AI generation capability, explaining how DocSmith intelligently plans and creates content. The accompanying visual abstractly represents this process of creation and analysis."
+        "contentCardBottomImage": "mediakit://feature-ai-generation.png"
+        "contentCardDescription": "Let our AI do the heavy lifting! It analyzes your codebase to create a logical structure and generates detailed, contextual content."
+        "contentCardTitle": "AI-Powered Generation"
+      - "sectionName": "MultiLanguageSupport"
+        "sectionSummary": "Focusing on global reach, this card details the extensive multi-language support. The visual of an interconnected globe immediately communicates the international aspect of this feature."
+        "contentCardBottomImage": "mediakit://feature-multi-language.png"
+        "contentCardDescription": "Go global with one command. We provide professional, context-aware translations for 12 languages."
+        "contentCardTitle": "Multi-Language Support"
+      - "sectionName": "SeamlessIntegration"
+        "sectionSummary": "This card showcases the powerful integration capabilities of DocSmith, emphasizing its connection to the AIGNE Hub and support for various LLMs. The visual symbolizes this flow of information and connectivity."
+        "contentCardBottomImage": "mediakit://feature-seamless-integration.png"
+        "contentCardDescription": "Connect to the entire AI ecosystem, from the AIGNE Hub to providers like OpenAI, Google, and Anthropic."
+        "contentCardTitle": "Seamless Integration"
+      - "sectionName": "SmartUpdates"
+        "sectionSummary": "This card explains the 'set it and forget it' benefit of smart updates, assuring users their docs will never be stale. The dynamic visual reinforces the idea of a continuous, automated cycle."
+        "contentCardBottomImage": "mediakit://feature-smart-updates.png"
+        "contentCardDescription": "DocSmith automatically identifies code changes and updates only what's necessary, ensuring your docs are always in sync."
+        "contentCardTitle": "Smart Updates"
+  - "sectionName": "QuickStart"
+    "sectionSummary": "An action-oriented section designed to get developers engaged immediately. It presents the single command needed to start, demonstrating the tool's simplicity and power right away."
+    "verticalHeroCode":
+      "name": "bash"
+      "content": "aigne doc generate"
+    "verticalHeroDescription": "No lengthy setup, no complex configuration. Just navigate to your project directory and run one command. DocSmith intelligently analyzes your project and generates everything you need."
+    "verticalHeroTitle": "Get Started in Seconds"
+  - "sectionName": "AigneEcosystem"
+    "sectionSummary": "This section places DocSmith within the broader AIGNE platform, building credibility and showing users the full potential of the ecosystem they are joining. The architectural diagram provides a clear visual anchor for this concept."
+    "featureSectionBottomImage": "https://docsmith.aigne.io/image-bin/uploads/def424c20bbdb3c77483894fe0e22819.png"
+    "featureSectionDescription": "DocSmith is a key part of the AIGNE ecosystem, a comprehensive AI application development platform. It seamlessly integrates with other AIGNE components, leveraging the full power of the platform's AI capabilities and infrastructure to deliver amazing results."
+    "featureSectionTitle": "Part of the AIGNE Ecosystem"
+  - "sectionName": "CoreCommandsInAction"
+    "sectionSummary": "A dynamic and engaging showcase of DocSmith's core commands. Using alternating terminal players, this section provides a real-world feel of the CLI, making the developer experience tangible and exciting for the target audience."
+    "oneColumnGridTitle": "See It in Action"
+    "list":
+      - "sectionName": "GenerateCommand"
+        "sectionSummary": "Demonstrates the initial 'generate' command, showing users how easy it is to create their first set of documents from scratch."
+        "terminalLeft":
+          "actionLink": "link:///usage"
+          "actionTitle": "Explore All Commands"
+          "description": "Kick things off with the main event! The `generate` command is your starting point. It intelligently scans your project, understands the structure, and creates a full set of polished documentation automatically. It's the magic wand you've been waiting for."
+          "title": "aigne doc generate"
+        "terminalPlaybackData": "mediakit://generate.json"
+      - "sectionName": "UpdateCommand"
+        "sectionSummary": "Illustrates the 'update' command, highlighting how simple it is to refresh and refine existing documentation with new feedback."
+        "terminalPlaybackData": "mediakit://update.json"
+        "terminalRight":
+          "actionLink": "link:///usage"
+          "actionTitle": "Learn More"
+          "description": "Keep your docs fresh and relevant. The `update` command lets you interactively select and regenerate specific parts of your documentation. Have new feedback or need to add more detail? It's the perfect tool for targeted, iterative improvements."
+          "title": "aigne doc update"
+      - "sectionName": "TranslateCommand"
+        "sectionSummary": "Showcases the 'translate' command, visually reinforcing the powerful multi-language capabilities of DocSmith."
+        "terminalLeft":
+          "actionLink": "link:///usage"
+          "actionTitle": "See Language List"
+          "description": "Ready to go global? The `translate` command makes it incredibly simple. Instantly convert your documentation into 12 different languages with AI-powered, context-aware translations that maintain technical accuracy and consistency."
+          "title": "aigne doc translate"
+        "terminalPlaybackData": "mediakit://translate.json"
+      - "sectionName": "PublishCommand"
+        "sectionSummary": "Features the 'publish' command, showing the final step of sharing the documentation with the world, emphasizing speed and ease of deployment."
+        "terminalPlaybackData": "mediakit://publish.json"
+        "terminalRight":
+          "actionLink": "link:///usage"
+          "actionTitle": "View Publishing Options"
+          "description": "Share your masterpiece with the world! The `publish` command lets you instantly deploy your documentation to a shareable link. Whether you're using our platform or your own, getting your docs live is just one command away."
+          "title": "aigne doc publish"
   - "sectionName": "FinalCta"
-    "sectionSummary": "A final, high-energy call-to-action to encourage immediate user conversion. It prompts users to install the CLI and get started, with a secondary option to join the community."
-    "ctaTitle": "Ready to Ditch Manual Docs?"
-    "ctaDescription": "Stop writing documentation and start generating it. Install the AIGNE CLI and create your first docset in minutes. It's free to get started!"
+    "sectionSummary": "A final, energetic call-to-action to convert visitors. It summarizes the core benefit and provides clear, unmissable buttons for users to take the next step on their journey with DocSmith."
     "cta":
-      - "text": "Start Your Free Trial"
-        "link": "link:///quick-start"
-      - "text": "Join the Community"
+      - "text": "Get Started Now"
+        "link": "link:///getting-started"
+      - "text": "Join Our Community"
         "link": "link:///community"
+    "ctaDescription": "Ready to stop worrying about documentation and start focusing on what you do best? Join thousands of developers who are building better products with less friction. Try AIGNE DocSmith today and feel the difference!"
+    "ctaTitle": "Revolutionize Your Documentation Workflow"
