--- a/.aigne/web-smith/pages/workspace/website-structure.yaml
+++ b/.aigne/web-smith/pages/workspace/website-structure.yaml
@@ -1,84 +1,63 @@
-- title: "AIGNE DocSmith: AI-Powered Documentation Generation"
-  description: The main landing page for AIGNE DocSmith. It introduces the core
-    value proposition of AI-driven documentation, highlights key benefits like
-    intelligent analysis and multi-language support, and showcases the tool in
-    action through terminal playback animations.
+- title: "AIGNE DocSmith: AI-Powered Documentation"
+  description: The main landing page for AIGNE DocSmith, introducing its core
+    value proposition of AI-driven code documentation. It highlights key
+    features, shows the AIGNE ecosystem, and provides a quick start command to
+    drive user adoption.
   path: /home
   navigation:
     title: Home
-    description: Discover AI-powered docs
+    description: AI-powered code documentation
+  parentId: "null"
   sourceIds:
     - README.md
-    - assets/terminal-playback/generate.json
-    - assets/terminal-playback/update.json
-    - assets/terminal-playback/translate.json
-    - assets/terminal-playback/publish.json
-    - assets/terminal-playback/README.md
-  parentId: ""
-- title: Features of AIGNE DocSmith
-  description: This page details the powerful features of DocSmith, including
-    AI-powered content generation, support for 12 languages, seamless
-    integration with Large Language Models (LLMs) via AIGNE Hub, and smart
-    update capabilities that keep documentation in sync with code changes.
+- title: Core Features
+  description: A detailed breakdown of DocSmith's main capabilities, including
+    AI-powered generation, multi-language support, seamless LLM integration, and
+    smart update mechanisms. This page aims to convince users of the tool's
+    power and versatility.
   path: /features
   navigation:
     title: Features
-    description: Explore product features
+    description: Explore core capabilities
+  parentId: "null"
   sourceIds:
     - README.md
-    - aigne.yaml
     - docs/overview.md
-  parentId: ""
-- title: Quick Start
-  description: A step-by-step guide for new users to install the AIGNE CLI, set up
-    DocSmith, and generate their first set of documentation. It covers
-    prerequisites, installation commands, and an overview of the core
-    functionalities like generate, update, and publish.
-  path: /quick-start
+- title: Getting Started Guide
+  description: A step-by-step tutorial for new users, covering prerequisites,
+    installation of the AIGNE CLI, and how to generate the first set of
+    documents using the 'aigne doc generate' command. Includes screenshots of
+    the process.
+  path: /getting-started
   navigation:
-    title: Quick Start
-    description: Get started in minutes
+    title: Get Started
+    description: Install and run in minutes
+  parentId: "null"
   sourceIds:
-    - README.md
     - docs/getting-started.md
-    - docs/overview.md
-  parentId: ""
-- title: Enterprise and Production Use
-  description: Information for businesses and large teams. This page outlines
-    enterprise-grade features such as team collaboration, custom branding, API
-    integration, and enhanced security options like private cloud deployment and
-    SSO integration. It also provides contact information for support and
-    services.
-  path: /enterprise
+    - README.md
+- title: Usage Guide & Commands
+  description: A comprehensive reference for all core CLI commands such as
+    generate, update, translate, and publish. This page serves as a practical
+    guide for users to leverage the full potential of DocSmith.
+  path: /usage
   navigation:
-    title: Enterprise
-    description: Solutions for your business
+    title: Usage Guide
+    description: Master the CLI commands
+  parentId: "null"
   sourceIds:
     - README.md
-  parentId: ""
-- title: Community and Resources
-  description: A central hub for community support and resources. This page
-    provides links to official documentation, tutorials, community forums, and
-    social media channels. It also includes information on how to contribute to
-    the project by reporting issues or requesting features.
+    - docs/overview.md
+    - assets/terminal-playback/README.md
+    - aigne.yaml
+- title: Community & Enterprise
+  description: A central hub for community engagement, contributions, and
+    enterprise inquiries. This page provides information on reporting issues,
+    requesting features, enterprise-level services, and the project's license.
   path: /community
   navigation:
     title: Community
-    description: Get help and contribute
+    description: Get support and contribute
+  parentId: "null"
   sourceIds:
     - README.md
-  parentId: ""
-- title: About AIGNE DocSmith
-  description: This page provides a high-level overview of AIGNE DocSmith, an
-    AI-powered tool designed to automate documentation generation. It explains
-    the core purpose of the tool—to keep documentation current and accurate by
-    analyzing source code—and its place within the broader AIGNE ecosystem.
-  path: /about
-  navigation:
-    title: About
-    description: Learn about our mission
-  parentId: null
-  sourceIds:
-    - docs/overview.md
-    - README.md
-    - aigne.yaml
